<resources>
    <string name="app_name">BeigE</string>
    <string name="to_beige">To BeigE</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="beige">BeigE</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="proceedbtn">proceedbtn</string>
    <string name="backbtn">backbtn</string>
    <string name="icon">icon</string>
    <string name="playlistbtn">playlistbtn</string>
    <string name="backgroundpopup">backgroundpopup</string>
    <string name="homebtn">homebtn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="last_played">Last Played</string>
    <string name="saperators">saperators</string>
    <string name="joji">joji</string>
    <string name="twice">twice</string>
    <string name="glimpse_of_us">Glimpse of Us</string>
    <string name="Joji">Joji</string>
    <string name="fancy">Fancy</string>
    <string name="Twice">TWICE</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="feel_special">Feel Special</string>
    <string name="yoasobi">yoasobi</string>
    <string name="drake">drake</string>
    <string name="yoasobi_song">夜に駆ける</string>
    <string name="yoasobi_name">Yoasobi</string>
    <string name="nonstop">Nonstop</string>
    <string name="Drake">Drake</string>
    <string name="albums">Albums</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="weeknd">weeknd</string>
    <string name="blinding_lights">Blinding Lights</string>
    <string name="_20_min">20 Min</string>
    <string name="lil_uzi_vert">Lil Uzi Vert</string>
    <string name="bruno_mars">Bruno Mars</string>
    <string name="the_kid_laroi">The Kid Laroi</string>
    <string name="daily_mix">Daily Mix</string>
    <string name="stay">Stay</string>
    <string name="top_charts">Top Charts</string>
    <string name="travis_scott">Travis Scott</string>
    <string name="rich_minion">Rich Minion</string>
    <string name="highest_in_the_room">HIGHEST IN THE ROOM</string>
    <string name="yeat">Yeat</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="log_out">Log out</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="play">Play</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="playpausebtn">PlayPauseBtn</string>
    <string name="nextbtn">NextBtn</string>
    <string name="prevbtn">PrevBtn</string>
    <string name="artcover">ArtCover</string>
    <string name="like">Like</string>
    <string name="option">Option</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="baby_keem">Baby Keem</string>
    <string name="family_ties">family ties</string>
    <string name="feels">Feels</string>
    <string name="calvin_harris">Calvin Harris</string>
    <string name="that_s_what_i_like">That\'s What I Like</string>
    <string name="xo_tour_lif3">XO Tour Lif3</string>
    <string name="liked_playlist">Liked Playlist</string>
    <string name="now_playing">Now Playing</string>
    <string name="textview">TextView</string>
    <string name="there_are_no_liked_songs">There are no liked songs.</string>
    <string name="kee_liang">Kee Liang</string>
    <string name="_0">0</string>
    <string name="albums_profile">Albums:</string>
    <string name="playlist_profile">Playlist:</string>
    <string name="all_current_songs">All Current Songs</string>
    <string name="tan_kee_liang">Tan Kee Liang</string>
    <string name="about">About</string>
    <string name="about_text1">This is BeigE, is it a basic music app with a simplistic layout.</string>
    <string name="about_text2">All UIs have been done by Kee Liang, some of the UIs have been inspired from Spotify.</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="minutes">Minutes</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="seconds">Seconds</string>
    <string name="hours">Hours</string>
    <string name="report_a_bug_text">This app is in alpha version, users will encounter some bugs/errors.</string>
    <string name="report_a_bug_text2">In-order to help improve this app, users can write down their findings of bugs/errors in the box below.</string>
    <string name="feedback">Feedback</string>
    <string name="enter_your_feedback">Enter Your Feedback</string>
    <string name="you_do_not_have_an_account">You do not have an account?</string>
    <string name="have_a_account_already">Have a account already?</string>
</resources>