<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PlaySongActivity">

    <ImageView
        android:id="@+id/imgCoverArt"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/artcover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/twice" />

    <TextView
        android:id="@+id/txtSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/song_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCoverArt" />

    <TextView
        android:id="@+id/txtArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/artist_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSongTitle" />

    <ImageView
        android:id="@+id/btnPlayPause"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/playpausebtn"
        android:onClick="playOrPauseMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArtist"
        app:srcCompat="@drawable/play_btn" />

    <ImageView
        android:id="@+id/btnNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="97dp"
        android:contentDescription="@string/nextbtn"
        android:onClick="playNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
        app:srcCompat="@drawable/next_btn" />

    <ImageView
        android:id="@+id/btnPrevious"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/prevbtn"
        android:onClick="playPrevious"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
        app:srcCompat="@drawable/prev_btn" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoe"
        android:text="@string/beige"
        android:textColor="@color/light_begie"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_btn" />

    <ImageView
        android:id="@+id/liked_song_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:onClick="likeBtn"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart1_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>